@@ -344,14 +344,17 @@ command_get_prefix(const gchar *string,
 char *
 find_pixmap(char *filename)
 {
+/*	Thunor: Redundant.
 	char tmp[128];
 	static char *line = NULL;
 	static int length = 0;
 	FILE *locate;
+*/
 
 	if (access(filename, R_OK) == 0)
 		return filename;
 
+/*	Thunor: Redundant.
 	snprintf(tmp, 127, "/usr/share/icons/Bluecurve/16x16/stock/%s",
 			filename);
 	tmp[127] = '\0';
@@ -373,6 +376,9 @@ find_pixmap(char *filename)
 			return line;
 		}
 	}
+*/
+
+	return "";	/* Thunor: added as missing */
 }
 
 /*
